--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-json": "^2.4.5",
     "gatsby-transformer-sharp": "^2.5.3",
     "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
