--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reach/router": "^1.3.4",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-mdx": "^1.2.13",
     "gatsby-plugin-postcss": "^2.3.2",
     "gatsby-plugin-react-helmet": "^3.3.2",
