--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-remark-images": "^3.3.22",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-json": "^2.4.5",
     "gatsby-transformer-sharp": "^2.5.3",
