--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-feed": "^2.5.11",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.18",
     "gatsby-plugin-mdx": "^1.2.13",
     "gatsby-plugin-postcss": "^2.3.2",
