--- a/package.json
+++ b/package.json
@@ -14,40 +14,41 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@mdx-js/mdx": "^1.6.5",
-    "@mdx-js/react": "^1.6.5",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "gatsby": "^2.26.1",
+    "dotenv": "^8.6.0",
+    "gatsby": "^4.19.2",
     "gatsby-image": "^2.4.5",
-    "gatsby-plugin-feed": "^2.5.11",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-manifest": "^2.4.18",
-    "gatsby-plugin-mdx": "^1.2.13",
-    "gatsby-plugin-postcss": "^2.3.2",
-    "gatsby-plugin-react-helmet": "^3.3.2",
-    "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-plugin-sitemap": "^2.4.11",
-    "gatsby-remark-images": "^3.3.22",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-json": "^2.4.5",
-    "gatsby-transformer-sharp": "^2.5.3",
-    "prism-react-renderer": "^1.1.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "gatsby-plugin-feed": "^4.19.0",
+    "gatsby-plugin-google-analytics": "^4.19.0",
+    "gatsby-plugin-manifest": "^4.19.0",
+    "gatsby-plugin-mdx": "^3.19.0",
+    "gatsby-plugin-postcss": "^5.19.0",
+    "gatsby-plugin-react-helmet": "^5.19.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sharp": "^4.19.0",
+    "gatsby-plugin-sitemap": "^5.19.0",
+    "gatsby-remark-images": "^6.19.0",
+    "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-json": "^4.19.0",
+    "gatsby-transformer-sharp": "^4.19.0",
+    "prism-react-renderer": "^1.3.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "2.0.5",
-    "tailwindcss": "^1.4.6"
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "2.7.1",
+    "tailwindcss": "^3.1.6"
   },
   "repository": {
     "type": "git",
