--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-feed": "^4.19.0",
     "gatsby-plugin-google-analytics": "^4.19.0",
+    "gatsby-plugin-image": "^2.19.0",
     "gatsby-plugin-manifest": "^4.19.0",
     "gatsby-plugin-mdx": "^3.19.0",
     "gatsby-plugin-postcss": "^5.19.0",
